--- a/.github/workflows/build-linux-installer-deb.yml
+++ b/.github/workflows/build-linux-installer-deb.yml
@@ -129,7 +129,7 @@ jobs:
     - name: Upload to s3
       if: steps.check_secrets.outputs.HAS_SECRET
       env:
-          KIIW_INSTALLER_VERSION: ${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}
+          KIWI_INSTALLER_VERSION: ${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}
       run: |
           ls ${{ github.workspace }}/build_scripts/final_installer/
           aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/*.deb s3://download-chia-net/builds/
@@ -137,10 +137,10 @@ jobs:
     - name: Create Checksums
       if: startsWith(github.ref, 'refs/tags/')
       env:
-        KIIW_INSTALLER_VERSION: ${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}
+        KIWI_INSTALLER_VERSION: ${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}
       run: |
          ls ${{ github.workspace }}/build_scripts/final_installer/
-         sha256sum ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb > ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb.sha256
+         sha256sum ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb > ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb.sha256
          ls ${{ github.workspace }}/build_scripts/final_installer/
 
     - name: Install py3createtorrent
@@ -151,15 +151,15 @@ jobs:
     - name: Create .deb torrent
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb -o ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb.torrent --webseed https://download-chia-net.s3.us-west-2.amazonaws.com/install/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb
+        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb -o ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb.torrent --webseed https://download-chia-net.s3.us-west-2.amazonaws.com/install/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb
         ls
 
     - name: Upload Release Files
       if: steps.check_secrets.outputs.HAS_SECRET && startsWith(github.ref, 'refs/tags/')
       run: |
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb s3://download-chia-net/install/
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb.sha256 s3://download-chia-net/install/
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIIW_INSTALLER_VERSION }}_amd64.deb.torrent s3://download-chia-net/torrents/
+          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb s3://download-chia-net/install/
+          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb.sha256 s3://download-chia-net/install/
+          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/kiwi-blockchain_${{ steps.version_number.outputs.KIWI_INSTALLER_VERSION }}_amd64.deb.torrent s3://download-chia-net/torrents/
 
     - name: Get tag name
       if: startsWith(github.ref, 'refs/tags/')
